--- a/src/assets/css/Recommend.css
+++ b/src/assets/css/Recommend.css
@@ -1,9 +1,55 @@
+div {
+    transition: all 0.3s ease-out;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.slide {
+    display: flex;
+    align-items: center;
+}
+.flex-box {
+    display: flex;
+}
 .main-recommend{
-    height: 30vh;
+    width: 300px;
+    height: 300px;
     background-color: steelblue;
+    overflow: hidden;
+}
+.recommend-alcohol{
+    width: 300px;
+    height: 300px;
+    background-position: 50% 50%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    flex: none;
+}
+.btn {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    font-size: 3.3rem;
+    color: gray;
+    padding: 0 10px;
 }
 
-.recommend-alcohol{
-    width: 25vh;
-    height: 25vh;
+.position {
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+}
+.dot {
+    background: lightgray;
+    border-radius: 100%;
+    height: 10px;
+    width: 10px;
+}
+.dot + .dot {
+    margin-left: 20px;
+}
+.current {
+    background: gray;
 }
