--- a/src/assets/css/Layout.css
+++ b/src/assets/css/Layout.css
@@ -2,7 +2,7 @@
     height: 10vh;
 }
 .main-layout{
-    display: flex;
+    /*display: flex;*/
     align-items: center;
     justify-content: center;
     width: 100vw;
