--- a/src/assets/css/Recommend.css
+++ b/src/assets/css/Recommend.css
@@ -14,14 +14,14 @@ div {
     display: flex;
 }
 .main-recommend{
-    width: 300px;
-    height: 300px;
+    width: 80vw;
+    height: 30vh;
     background-color: steelblue;
     overflow: hidden;
 }
 .recommend-alcohol{
-    width: 300px;
-    height: 300px;
+    width: 80vw;
+    height: 30vh;
     background-position: 50% 50%;
     background-size: contain;
     background-repeat: no-repeat;
