Feat: 글쓰기 버튼 제작

--- a/src/assets/css/Community.css
+++ b/src/assets/css/Community.css
@@ -7,3 +7,11 @@
 .mainHeader{
     text-align: right;
 }
+.write-btn{
+    position: sticky;
+    bottom: 1vh;
+    text-align: right;
+}
+.write-btn button{
+    margin-right: 10px;
+}
